fixed sizing and spacing issues

--- a/style.css
+++ b/style.css
@@ -9,30 +9,34 @@
 
 body {
     background-color: black;
+    height: 100vh;
+    display: flex;
+    align-items: center;
 }
 
 .calc {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 600px;
-    height: 900px;
+    width: 400px;
+    height: 600px;
     background-image: linear-gradient(white, gray, black);
     margin: auto;
-    border-radius: 20px;
+    /* margin-top: 20px; */
+    border-radius: 14px;
     border: 4px solid black;
-    box-shadow: 0 0 25px 5px white;
+    box-shadow: 0 0 16px 3px white;
 }
 #input button, #input .spacer {
-    height: 120px;
-    width: 120px;
-    margin: 10px;
+    height: 80px;
+    width: 80px;
+    margin: 6px;
     border: 2px solid #3b3b3b;
     border-radius: 15px;
     background-color: #222222;
     font-weight: 1000;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
     box-shadow: 0 0 5px 1px #3b3b3b;
     transition: all .3s ease 0s;
@@ -69,20 +73,20 @@ body {
 }
 
 #input button.delete {
-    width: 260px;
+    width: 174px;
 }
 .display {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     overflow: hidden;
-    height: 140px;
-    width: 540px;
-    margin: 20px;
-    padding-right: 30px;
+    height: 93px;
+    width: 360px;
+    margin: 13.5px;
+    padding-right: 20px;
     background-color: #222222;
-    border-radius: 20px;
-    box-shadow: inset 0 0 10px 1px #eeeeee;
+    border-radius: 13.5px;
+    box-shadow: inset 0 0 7px 1px #eeeeee;
     color: white;
     font-family: 'digitalClock', sans-serif;
     font-size: 75px;
